@@ -5,7 +5,7 @@ import it.unipi.dii.mircv.index.utility.Logs;
 import java.io.*;
 import java.nio.ByteBuffer;
 import java.nio.channels.FileChannel;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Iterator;
 
@@ -26,7 +26,7 @@ public class PostingList {
      */
     public PostingList(Document doc) {
         postings = new ArrayList<>();
-        postings.add(new Posting(doc.getDocID(), 1));
+        postings.add(new Posting(doc.getDocID(), 1)); // at the creation of the posting list, the frequency is 1
         postingIterator = null;
         actualPosting = null;
     }
@@ -140,8 +140,6 @@ public class PostingList {
      * @return The next posting in the posting list with docID greater than or equal to the given docID.
      */
     public Posting nextGEQ(int docId, BlockDescriptorList bdl, int numBlocks, String path) {
-        //todo inserire controllo se posting è null dove chiami nextGEQ
-
         bdl.openBlock(); // initialize the block descriptor list iterator
 
         // find block that contains the docId
@@ -154,8 +152,8 @@ public class PostingList {
         }
         // docid found, load the posting list
         // check if the postinglist that I need is the one that I have already loaded
-        // TODO controllare con matteo. che faccio se non è quello il blocco giusto?
-        if (postings.get(bdl.getNumPosting() - 1).getDocID() != bdl.getMaxDocID()) {
+        if (postings.get(bdl.getNumPosting() - 1).getDocID() != bdl.getMaxDocID()) { // if the posting list is not loaded
+            // load the posting list
             this.readPostingList(-1, bdl.getNumPosting(), bdl.getPostingListOffset(), path);
             this.openList();
             this.next();
@@ -203,7 +201,7 @@ public class PostingList {
         try {
             FileOutputStream fileOutputStream = new FileOutputStream(filePath, true);
             FileChannel fileChannel = fileOutputStream.getChannel();
-            // starting offset in the file
+            // get the current position of the file pointer
             offset = fileChannel.position();
             ByteBuffer buffer = ByteBuffer.allocate(1024);
 
@@ -212,7 +210,7 @@ public class PostingList {
                 buffer.putInt(posting.getFreq());
                 // if the buffer is full, write the buffer to the file
                 if (!buffer.hasRemaining()) {
-                    buffer.flip(); // todo che minchia fa?
+                    buffer.flip();
                     fileChannel.write(buffer);
                     buffer.clear();
                 }
@@ -222,6 +220,7 @@ public class PostingList {
                 buffer.flip();
                 fileChannel.write(buffer);
             }
+            // close the file channel and the file output stream
             fileChannel.close();
             fileOutputStream.close();
         } catch (Exception e) {
@@ -239,29 +238,25 @@ public class PostingList {
      * @param filePath     The path of the file where the posting list should be read.
      */
     public void readPostingList(int indexCounter, int df, long offset, String filePath) {
-        // if indexCounter is not -1, the posting list is saved in portions
+        // If indexCounter is not -1, the posting list is saved in portions
         if (indexCounter != -1)
             filePath += indexCounter + ".bin";
 
-        ArrayList<Posting> result = new ArrayList<>(); // array of postings initialized to contain the posting list read from disk
+        ArrayList<Posting> result = new ArrayList<>(df); // Initialize with the expected size
 
-        try {
-            FileChannel fileChannel = FileChannel.open(Path.of((filePath)));
-            ByteBuffer buffer = ByteBuffer.allocate(8); // Buffer per leggere due interi
-            // put the file pointer at the start offset of the portion of posting list
+        try (FileChannel fileChannel = FileChannel.open(Paths.get(filePath))) {
+            int bufferSize = 8 * df; // size is 8 bytes for posting structure multiplied by the number of postings in the list
+            ByteBuffer buffer = ByteBuffer.allocate(bufferSize);
+            buffer.clear();
             fileChannel.position(offset);
-            for (int i = 0; i < df; i++) {
-                buffer.clear();
-                int bytesRead = fileChannel.read(buffer);
-                if (bytesRead == -1) // not enough bytes in the file to read
-                    break;
+            fileChannel.read(buffer);
+            buffer.flip();
 
-                buffer.flip();
+            for (int i = 0; i < df; i++) {
                 int docID = buffer.getInt();
                 int freq = buffer.getInt();
                 result.add(new Posting(docID, freq));
             }
-            fileChannel.close();
         } catch (IOException e) {
             e.printStackTrace();
         }
